fix: container overflow fixed

--- a/oasis/public/css/oasis.css
+++ b/oasis/public/css/oasis.css
@@ -18,13 +18,6 @@ body{
 .menu-icon{
     display: none;
 }
-#overlayNavbarMenu {
-    position: absolute;
-    top: 0;
-    right: -100%; 
-    width: 100%; /* Set the width of the overlay */
-    height: 100vh;
-}
 .overlayContent{
     position: fixed; 
     background-color: #f8f7ef; 
